# chat_app

./: CMakeLists.txt  Makefile  README.md
client/: CMakeLists.txt  chat_group.cpp  chat_group.hpp  client.cpp  client.hpp  login_group.cpp  login_group.hpp  login_window.cpp  login_window.hpp  main.cpp  options_window.cpp  options_window.hpp  registration_window.cpp  registration_window.hpp
server/: CMakeLists.txt  database.cpp  database.hpp  main.cpp  server.cpp  server.hpp  sqlite3.h
src/: main.cpp  server.cpp  server.hpp
utils/: CMakeLists.txt  data_buffer.cpp  data_buffer.hpp  network_utils.cpp  network_utils.hpp  packet.cpp  packet.hpp
